[gd_scene load_steps=8 format=3 uid="uid://c8sgggx2qfsx2"]

[ext_resource type="Script" path="res://src/scripts/dialogue-scripts/error_dialogue.gd" id="1_26cfa"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="2_4n3bk"]
[ext_resource type="Resource" uid="uid://bo8fnmu502em0" path="res://src/ui/dialogues/error_dialogue.tres" id="3_dj43v"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="4_k8hsk"]

[sub_resource type="RichTextEffect" id="RichTextEffect_atejj"]
script = ExtResource("4_k8hsk")

[sub_resource type="RichTextEffect" id="RichTextEffect_sprpr"]
script = ExtResource("4_k8hsk")

[sub_resource type="RichTextEffect" id="RichTextEffect_iqsd7"]
script = ExtResource("4_k8hsk")

[node name="Error-dialogue" type="Node"]
script = ExtResource("1_26cfa")

[node name="TransparentBack" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -477.0
offset_top = -279.0
offset_right = 828.0
offset_bottom = 1395.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.827451)

[node name="ErrorDialogue" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -120.0
offset_right = 251.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4n3bk")
data = ExtResource("3_dj43v")
start_id = "error"
hide_portrait = true
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_atejj"), SubResource("RichTextEffect_sprpr"), SubResource("RichTextEffect_iqsd7")])
max_options_count = 2
options_alignment = 1
options_vertical = true

[connection signal="dialogue_signal" from="ErrorDialogue" to="." method="_on_error_dialogue_dialogue_signal"]
